[workspace]
members = [
  "application-paths",
  "bytelinebuf",
  "bytelinestream",
  "exoshell/aui",
  "exoshell/command",
  "exoshell/event-queue",
  "exoshell/main",
  "exoshell/runner",
  "iomux",
  "tokio-childstream",
  "tokio-interval-stream",
]

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/nathan-at-least/tokio-childstream"

[workspace.dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
clap = { version = "4.2.2", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
derive_more = "0.99.17"
derive-new = "0.5.9"
dirs = "5.0.1"
futures = "0.3.28"
pin-project = "1.0.12"
test-case = "3.1.0"
tokio = "1.27.0"
tokio-util = { version = "0.7.7", features = ["io"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# Internal crates:
application-paths = { path = "application-paths" }
bytelinebuf = { path = "bytelinebuf" }
bytelinestream = { path = "bytelinestream" }
exoshell-aui = { path = "exoshell/aui" }
exoshell-command = { path = "exoshell/command" }
exoshell-event-queue = { path = "exoshell/event-queue" }
exoshell-main = { path = "exoshell/main" }
exoshell-runner = { path = "exoshell/runner" }
iomux = { path = "iomux" }
tokio-childstream = { path = "tokio-childstream" }
tokio-interval-stream = { path = "tokio-interval-stream" }
