[package]
name = "bytelinebuf"
version = "0.1.0"
description = "`Iterator` and `Stream` types for splitting bytes on `'\n'`"
homepage.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
stream = ["futures", "pin-project"]
testutil = []

[dependencies]
bytes.workspace = true
futures = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }

[dev-dependencies]
test-case.workspace = true
