[package]
name = "bytelinebuf"
version = "0.1.0"
description = "A buffer for splitting bytes on `'\n'`"
homepage.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
testutil = []

[dependencies]
bytes.workspace = true

[dev-dependencies]
test-case.workspace = true
