[package]
name = "bytelinestream"
version = "0.1.0"
description = "`Stream` type for splitting bytes on `'\n'` from an underlying stream"
homepage.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
bytelinebuf.workspace = true
futures.workspace = true
pin-project.workspace = true

[dev-dependencies]
futures.workspace = true
pin-project.workspace = true
test-case.workspace = true
tokio = { workspace = true, features = [ "macros", "rt" ] }
