[package]
name = "iomux"
version = "0.1.0"
description = "Multiplex stdout, stderr, and other info about child commands."
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytelinebuf.workspace = true
bytes.workspace = true
clap.workspace = true
futures.workspace = true
tokio-childstream.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "process"] }

[dev-dependencies]
test-case.workspace = true
