[package]
name = "tokio-childstream"
version = "0.1.0"
description = "Convert a tokio::process::Child into a Stream for stdout, stderr, and exit events."
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["process", "rt"] }
tokio-util.workspace = true

[dev-dependencies.tokio]
workspace = true
features = ["rt", "macros"]
