[package]
name = "tokio-childstream"
version = "0.1.0"
description = "Convert a tokio::process::Child into a Stream for stdout, stderr, and exit events."
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
pin-project.workspace = true
tokio = { workspace = true, features = ["process", "rt"] }
tokio-util.workspace = true

[dependencies.bytelinebuf]
path = "../bytelinebuf"
features = ["stream"]
version = "0.1.0"

[dev-dependencies]
test-case.workspace = true

[dev-dependencies.tokio]
workspace = true
features = ["rt", "macros"]
