[package]
name = "tokio-childstream"
version = "0.1.1"
description = "Convert a tokio::process::Child into a Stream for stdout, stderr, and exit events."
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytelinebuf = { workspace = true, features = [ "stream" ] }
bytes.workspace = true
futures.workspace = true
pin-project.workspace = true
tokio-util.workspace = true
tokio = { workspace = true, features = ["process", "rt"] }

[dev-dependencies]
bytelinebuf = { workspace = true, features = [ "testutil" ] }
test-case.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
