[package]
name = "exoshell-command"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["process"] }

[dependencies.tokio-childstream]
path = "../../tokio-childstream"
version = "0.1.0"
