[package]
name = "exoshell"
description = "Full-terminal command execution ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
derive_more.workspace = true
derive-new.workspace = true
exoshell-event-queue.workspace = true
exoshell-runner.workspace = true
futures.workspace = true
tokio-interval-stream.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
