[package]
name = "exoshell-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
derive-new.workspace = true

[dependencies.exoshell-command]
path = "../command"
version = "0.1.0"

[dependencies.exoshell-event-queue]
path = "../event-queue"
version = "0.1.0"

[dependencies.tokio-childstream]
path = "../../tokio-childstream"
version = "0.1.1"

[dev-dependencies]
test-case.workspace = true
