[package]
name = "exoshell-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
derive-new.workspace = true
exoshell-command.workspace = true
exoshell-event-queue.workspace = true
futures.workspace = true
tokio-childstream.workspace = true

[dev-dependencies]
test-case.workspace = true
